fix: remover overflow of the buttons

--- a/src/app/styles/globals.sass
+++ b/src/app/styles/globals.sass
@@ -9,3 +9,10 @@
 
 .ant-pagination-options-size-changer
   display: none
+
+button
+  cursor: pointer
+  overflow: hidden
+
+.ant-btn
+  overflow: hidden
